Correcting translation, some font weight for readability

--- a/src/Components/Technologies/Technologies.css
+++ b/src/Components/Technologies/Technologies.css
@@ -27,6 +27,7 @@ ul {
 .technologies li {
   margin: 10px;
   padding: 10px;
+  font-weight: bold;
 }
 
 .technologies__section {
